# soma-rs

./: CLAUDE.md  Cargo.toml  README.md
seqa_cli/: CLAUDE.md  (+2 more)
seqa_core/: CLAUDE.md  Cargo.toml  README.md
seqa_core/src/: lib.rs
seqa_core/src/api/: bam_search.rs  bigwig_search.rs  fasta_search.rs  mod.rs  output_format.rs  search.rs  search_options.rs  tabix_search.rs
seqa_core/src/codecs/: gzip.rs  mod.rs  zlib.rs
seqa_core/src/genome/: mod.rs
seqa_core/src/indexes/: bin_util.rs  chunk.rs  chunk_util.rs  constants.rs  index_cache.rs  test_data.rs  virtual_offset.rs
seqa_core/src/indexes/bai/: chr_idx.rs  mod.rs
seqa_core/src/indexes/bigwig/: total_summary.rs  zoom_header.rs
seqa_core/src/models/: bed.rs  bedgraph.rs  cytoband.rs  gene_coordinate.rs  gtf.rs  vcf.rs
seqa_core/src/sqlite/: genes.rs  mod.rs
seqa_core/src/stores/: error.rs  mod.rs  store.rs
seqa_core/src/traits/: feature.rs
seqa_core/tests/: bam.rs  bigbed.rs  bigwig.rs  fasta.rs  local.rs  obj_store.rs  read.rs  sqlite.rs  tabix.rs
soma_core/: CLAUDE.md  Cargo.toml  README.md  data-sources.txt  playground-1.mongodb.js
soma_core/mock_data/: NA12878.gatk.cnv.vcf.gz.tbi  patients.json
soma_core/src/: lib.rs  utils.rs
soma_core/src/api/: bam_search.rs  bigbed_search.rs  bigwig_search.rs  constants.rs  output_format.rs  search.rs  search_options.rs  search_result.rs  tabix_search.rs
soma_core/src/codecs/: deflate.rs  gzip.rs  mod.rs
soma_core/src/genome/: mod.rs
soma_core/src/indexes/: bin.rs  index_cache.rs  mod.rs
soma_core/src/models/: bed.rs  constants.rs  coordinates.rs  gff.rs  mod.rs  tabix_header.rs  vcf.rs
soma_core/src/mongo/: constants.rs  mod.rs
soma_core/src/services/: mod.rs
soma_core/src/stores/: mod.rs  store.rs
soma_core/src/traits/: feature.rs
soma_core/tests/: bam.rs  bigbed.rs  bigwig.rs  local.rs  mod.rs  mongo.rs  obj_store.rs  read.rs  sqlite.rs  tabix.rs
soma_rocket/: CLAUDE.md  Cargo.toml  README.md
soma_rocket/src/: main.rs
soma_rocket/src/data/: grch38-cytobands.db
soma_rocket/src/mongo/: mod.rs
soma_rocket/src/search/: mod.rs  models.rs
(+73 files in other folders)
