[package]
name = "seqa_core"
version = "1.0.0"
edition = "2024"
authors = ["Andrew Warren"]
rust-version = "1.94.0"
description = "Object store support for vcf, bam, fasta, bigwig, bigbed, gff, bed, bedgraph, gtf"
license = "GPL-3.0-only"
repository = "https://github.com/docwarren/soma-rs"
homepage = "https://www.seqa23.com"

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
tokio = { version ="1.44.2", features = ["full"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
flate2 = "1.1.1"
object_store = { version = "0.12.4", features = ["aws", "azure", "reqwest", "http", "gcp"] }
thiserror = "2.0.16"
rusqlite = { version = "0.37.0", optional = true }