[package]
name = "soma_rocket"
version = "1.0.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
soma_core = { path = "../soma_core", features = ["sqlite", "mongo"] }
rusqlite = "0.37.0"
serde = "1.0.219"
rocket_cors = "0.6.0"
thiserror = "2.0.16"
libsql = "0.9.24"
